CSS tweaks. Updates logo.

--- a/options.html
+++ b/options.html
@@ -12,11 +12,11 @@
 	<div class="logo">
 		<div class="title">SearchPin</div>
 	</div>
-	<div id="intro_button" class="category hoverable">Introduction</div>
-	<div id="help_button" class="category hoverable">Help</div>
-	<div id="features_button" class="category hoverable">Features</div>
-	<div id="reference_button" class="category hoverable">Reference</div>
-	<div id="targets_button" class="category hoverable">Search Targets</div>
+	<div id="intro_button" class="category hoverable generic">Introduction</div>
+	<div id="help_button" class="category hoverable help">Help</div>
+	<div id="features_button" class="category hoverable help">Features</div>
+	<div id="reference_button" class="category hoverable help">Reference</div>
+	<div id="targets_button" class="category hoverable option">Search Targets</div>
 </div>
 
 <!-- landing page -->
@@ -104,7 +104,6 @@
 			Description
 		</span>
 		<span class="content">
-			<p>Usage: <span class="embedded_command_format">> search terms</span></p>
 			<p>Entering search terms will start a search for those terms.</p>
 		</span>
 		<span class="subsubtitle">
@@ -139,9 +138,9 @@
 		<span class="content">
 			<p><span class="embedded_command_format">> +javascript</span></p>
 			<p>This will set your prefix to javascript, which means you can search for relevant things without retyping it each time.</p>
-			<p><span class="embedded_command_format">> tutorials</span></p>
-			<p><span class="embedded_command_format">> define classes</span></p>
-			<p>This will search for "javascript tutorials" and "javascript custom classes".</p>
+			<p><span class="embedded_command_format">> arrays</span></p>
+			<p><span class="embedded_command_format">> tips</span></p>
+			<p>This will search for "javascript arrays" and "javascript tips".</p>
 		</span>
 
 
