Arranges files into folders

--- a/options.html
+++ b/options.html
@@ -1,11 +1,11 @@
 <html>
 <head>
 	<link href='http://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" href="main.css">
-	<link rel="stylesheet" href="search_targets.css">
-	<link rel="stylesheet" href="reference.css">
-	<link rel="stylesheet" href="suffixes.css">
-	<link rel="shortcut icon" href="16icon_colour.png">
+	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="css/search_targets.css">
+	<link rel="stylesheet" href="css/reference.css">
+	<link rel="stylesheet" href="css/suffixes.css">
+	<link rel="shortcut icon" href="img/16icon_colour.png">
 	<script src="lib/jquery-1.11.2.min.js"></script>
 </head>
 <body>
@@ -396,7 +396,7 @@
 	</div>
 </div>
 
-	<script src="navigation.js"></script>
-	<script src="options.js"></script>
+	<script src="js/navigation.js"></script>
+	<script src="js/options.js"></script>
 </body>
 <html>
