Typo fix and CSS tweaks for options page

--- a/options.html
+++ b/options.html
@@ -23,7 +23,7 @@
 </div>
 
 <!-- landing page -->
-<div id="intro_page" class="main_content">
+<div id="intro_page" class="main_content hidden">
 	<div class="top banner">
 		<span class="title">
 			Welcome to the SearchPin Extension for Chrome!
@@ -160,7 +160,7 @@
 			Description
 		</span>
 		<span class="content">
-			<p>Multisearches will perform many different searches in with command. These searches will also use your prefix.</p>
+			<p>Multisearches will perform many different searches in one command. These searches will also use your prefix.</p>
 		</span>
 		<span class="subsubtitle">
 			Example
@@ -289,7 +289,7 @@
 </div>
 
 <!-- search targets page -->
-<div id="search_targets" class="main_content hidden">
+<div id="search_targets" class="main_content">
 	<div class="top banner">
 		<span class="title">
 			Search targets
