Fix targets page so it is now functional

--- a/options.html
+++ b/options.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="css/suffixes.css">
 	<link rel="shortcut icon" href="img/16icon_colour.png">
 	<script src="lib/jquery-1.11.2.min.js"></script>
+
 </head>
 <body>
 
@@ -317,13 +318,9 @@
 				<span class="option yes">Make Default</span>
 			</td></tr>
 			<tr><td>URL Pattern</td><td>
-				<div id="url" class="url">www.google.com/searchquery?q=searchquery?q=</div>
+				<input id="url" class="url" placeholder="url"> </input>
 			</td></tr>
 		</table>
-		<div id="pattern_editor">
-			<div id="url_pattern" contenteditable="true">http://www.reddit.com/r/DotA2/search?q=<span class="replace_target">*</span>&amp;restrict_sr=on&amp;sort=relevance&amp;t=all</div>
-			<div>Here you can edit the URL pattern which this target uses. Place a * where your search term would go.</div>
-		</div>
 		<div id="remove_button">
 			Remove
 		</div>
