Work on improving suggestions

--- a/options.html
+++ b/options.html
@@ -21,6 +21,7 @@
 	<div id="reference_button" class="category hoverable help">Reference</div>
 	<div id="targets_button" class="category hoverable option">Search Targets</div>
 	<div id="suffixes_button" class="category hoverable option">Suffixes</div>
+	<div id="donate_button" class="category hoverable donate">Donate</div>
 </div>
 
 <!-- landing page -->
@@ -196,7 +197,7 @@
 		<span class="content">
 			<p><span class="embedded_command_format">> filetype:pdf > pdf</span></p>
 			<p><span class="embedded_command_format">> books !pdf</span></p>
-			<p><span class="embedded_command_format">> definition > !d</span></p>
+			<p><span class="embedded_command_format">> define: > d</span></p>
 			<p><span class="embedded_command_format">> !d nifty</span></p>
 		</span>
 
@@ -343,7 +344,7 @@
 		</span>
 		Filter
 
-		<div class="suffix_list">
+		<div id="suffix_list" class="suffix_list">
 			<div class="suffix">
 				<span class="suffix_shortcut">
 					!pdf
@@ -393,6 +394,28 @@
 	</div>
 </div>
 
+
+<!-- landing page -->
+<div id="donate_page" class="main_content hidden">
+	<div class="top banner">
+		<span class="title">
+			Maybe???
+		</span>
+
+		<span class="content">
+			Tricks just got fired...
+		</span>
+
+		<span class="subtitle">
+			Credit
+		</span>
+
+		<span class="content">
+			<p>SearchPin is developed by <a href="https://github.com/ajvr">Alastair Janse van Rensburg</a> and <a href="https://github.com/JamesFarrant">James Farrant</a></p>
+			<p>SearchPin uses <a href="http://lokeshdhakar.com/projects/color-thief/">color-thief</a> to get favicon colours. Some icons are from <a href="http://www.famfamfam.com/">FamFamFam</a>.
+		</span>
+	</div>
+</div>
 	<script src="js/navigation.js"></script>
 	<script src="js/options.js"></script>
 </body>
